Методы контроллера и сервиса администратора перенесены в соответствующие разделы. Отредактирована валидация dto.